--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "prepublishOnly": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "release:dev": "ALLOW_PUBLISH=true npm publish"
+    "release": "ALLOW_PUBLISH=true npm publish"
   },
   "author": "ca136",
   "license": "ISC",
@@ -14,5 +14,6 @@
     "@types/node": "^13.13.2",
     "ts-node": "^8.9.0",
     "typescript": "^3.8.3"
-  }
+  },
+  "bin": "cli.js"
 }
