--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prepublishOnly": "node index.js",
+    "prepublishOnly": "node cli.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "release": "ALLOW_PUBLISH=true npm publish"
   },
